Maven version updated

--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,12 @@
   <groupId>nz.ac.auckland</groupId>
   <artifactId>MLib</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   <dependencies>
-	  <!-- https://mvnrepository.com/artifact/junit/junit -->
-	  
+	  <!-- https://mvnrepository.com/artifact/junit/junit -->	  
 	  <dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
